# ChangeLog for app-portage/layman
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.32 2007/01/04 11:33:57 wrobel Exp $

*layman-1.0.9 (04 Jan 2007)

  04 Jan 2007; <wrobel@gentoo.org> -layman-1.0.8.ebuild,
  +layman-1.0.9.ebuild:
  Added layman-1.0.9 to the tree. Fixes bugs #148698, #159051, #151965, #149867.

  29 Dec 2006; <doug@gentoo.org> layman-1.0.8.ebuild:
  Make layman check that nowebdav is not set on subversion since it needs webdav

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> layman-1.0.6.ebuild:
  Stable on ia64.

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> layman-1.0.8.ebuild:
  Add ~x86-fbsd keyword. Thanks to Timothy Redaelli in bug #149841.

*layman-1.0.8 (23 Sep 2006)

  23 Sep 2006; <wrobel@gentoo.org> -layman-1.0.7.ebuild,
  +layman-1.0.8.ebuild:
  Added cvs support to layman. Update to 1.0.8

  18 Sep 2006; Ferris McCormick <fmccor@gentoo.org> layman-1.0.6.ebuild,
  layman-1.0.7.ebuild:
  layman-1.0.6 stable on sparc --- Bug #144228 --- and add ~sparc keyword to
  1.0.7.

  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org> layman-1.0.7.ebuild:
  Added ~ppc64

*layman-1.0.7 (06 Sep 2006)

  06 Sep 2006; <wrobel@gentoo.org> -layman-1.0.0.ebuild,
  -layman-1.0.4.ebuild, +layman-1.0.7.ebuild:
  Update to layman-1.0.7

  23 Aug 2006; <malc@gentoo.org> layman-1.0.6.ebuild:
  Stable on amd64

  22 Aug 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
  layman-1.0.6.ebuild:
  stable on ppc (Bug #144228)

  22 Aug 2006; Ferris McCormick <fmccor@gentoo.org> layman-1.0.6.ebuild:
  Add ~sparc keyword.  Seems fine.

  22 Aug 2006; Thomas Cort <tcort@gentoo.org> layman-1.0.6.ebuild:
  Stable on alpha wrt Bug #144228.

  22 Aug 2006; Alastair Tse <liquidx@gentoo.org> layman-1.0.6.ebuild:
  stable for x86

*layman-1.0.6 (25 Jul 2006)

  25 Jul 2006; <wrobel@gentoo.org> -layman-1.0.5.ebuild,
  +layman-1.0.6.ebuild:
  layman-1.0.6 in response to bug #141691
