@@ -1,0 +1,3 @@
+MD5 24a76ba254431e48856b7965658c03ef layman-1.0.10.tar.gz 34384
+RMD160 67442e123d468f4cc8284d34e49ded75178e4a52 layman-1.0.10.tar.gz 34384
+SHA256 c0b3bb5b6609ebbecaf4270d2ef7deb33e1ec61f72755a31d3dd7ca49d1acf03 layman-1.0.10.tar.gz 34384
