@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/layman
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.32 2007/01/04 11:33:57 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.33 2007/01/09 18:01:15 wrobel Exp $
+
+*layman-1.0.10 (09 Jan 2007)
+
+  09 Jan 2007; <wrobel@gentoo.org> -layman-1.0.9.ebuild,
+  +layman-1.0.10.ebuild:
+  Added layman-1.0.10 to the tree. Fixes bugs #159695 and #160143.
 
 *layman-1.0.9 (04 Jan 2007)
 
